--- a/TelegramBot.AdminPanel/Views/Home/Create.cshtml
+++ b/TelegramBot.AdminPanel/Views/Home/Create.cshtml
@@ -1,7 +1,60 @@
 ﻿@using TelegramBot.Service.DTOs.Products;
+@model ProductForResultDto;
 
-@model ProductForCreateDto
-@{
-    ViewData["Title"] = "Create page";
+<div class="row">
+    <div class="col-md-4">
+        <form asp-controller="Home" asp-action="Create" method="post" enctype="multipart/form-data">
+
+            <div class="form-group">
+                <label asp-for="Name" class="control-label ">Product Name</label>
+                <input placeholder="Product name" asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Price" class="control-label ">Price</label>
+                <input placeholder="Number" type="number" asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Provider" class="control-label">Provider</label>
+                <input placeholder="Provider" asp-for="Provider" class="form-control" />
+                <span asp-validation-for="Provider" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Description" class="control-label ">Description</label>
+                <textarea asp-for="Description" class="form-control" cols=40 rows=5></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Image" class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-10">
+                    <div class="custom-file">
+                        <input type="file" asp-for="Image" class="form-control custom-file-input" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group mt-2 ">
+                <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Create</button>
+                </div>
+            </div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        </form>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('.custom-file-input').on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).next('.custom-file-label').html(fileName);
+            });
+        });
+    </script>
 }
-
