--- a/TelegramBot.AdminPanel/wwwroot/css/MyStyle.css
+++ b/TelegramBot.AdminPanel/wwwroot/css/MyStyle.css
@@ -1,15 +1,10 @@
-﻿
-
-.nav {
-    background-color: #282828;
-    width: 100%;
-    height: 70px;
+﻿.navbar{
+    margin-bottom:10px;
 }
-
 .nav_items {
     display: flex;
     list-style: none;
-    margin: 0;
+    margin: auto;
     padding: 0;
     align-items: center;
     justify-content: center;
@@ -22,11 +17,77 @@
 
         .nav_items li a {
             text-decoration: none;
-            color: white;
-            font-weight: bold;
+            font-weight: bolder;
+            font-size: 20px;
             padding: 10px 15px;
         }
 
             .nav_items li a:hover {
                 color: lawngreen;
+                border-bottom: 3px red solid;
             }
+
+.new_product {
+    font-size: 20px;
+    background-color: lawngreen;
+    border-radius: 10px;
+}
+
+    .new_product:hover {
+        background-color: red;
+    }
+
+.product__row{
+    margin-top: 20px;
+    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.card {
+    width: 300px;
+    height: 400px;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 10px;
+    box-shadow: 2px 3px 2px 3px rgb(121, 121, 121);
+}
+
+.img__box {
+    max-width: 300px;
+    width: 100%;
+    height: 200px;
+}
+
+    .img__box img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+.product__title {
+    margin: 20px 0px;
+    text-align: center;
+}
+
+.product__description {
+    text-align: center;
+}
+
+.product__price {
+    font-weight: 600;
+}
+
+.product__footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card_box{
+    text-decoration:none;
+    color:black;
+}
